Blackpurl/src/objects/DP360_Configuration__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Dealer_Id__c</fullName>
        <label>Dealer Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Point_URL__c</fullName>
        <label>End Point URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Synched_Date__c</fullName>
        <label>Last Synched Date</label>
        <type>DateTime</type>
    </fields>
    <label>DP360 Configuration</label>
</CustomObject>